made project buttons responsive on new layout, fixed nav bar collapse

--- a/components/navBar/navBarStyle.module.css
+++ b/components/navBar/navBarStyle.module.css
@@ -1,7 +1,7 @@
 /* General Styling */
 .navBarContainer {
     opacity: .9;   
-    height: 80px;
+    /* height: 80px; */
 }
 .navHeader {
     font-size: 36px;
@@ -17,6 +17,7 @@
 
 .navLink:hover {
     font-size: 32px;
+    cursor: pointer;
 }
 
 /* Light Theme */
